--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/userdb?useUnicode=yes&characterEncoding=UTF-8
+server.port=8081
+spring.datasource.url = jdbc:mysql://localhost:3306/userdb?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username = root
-spring.datasource.password = aA123456
+spring.datasource.password = 19961903
+#aA123456
 spring.jpa.show-sql = true
 
 #spring.datasource.initialize=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-#create
+#create-update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -16,3 +18,5 @@ spring.mail.password=hvzlqvamsyklqtle
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
+mail.smtp.ssl.trust=smtp.gmail.com
+mail.smtp.starttls.enable=true
