--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.datasource.url = jdbc:mysql://localhost:3306/userdb?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username = root
-spring.datasource.password = aA123456
+spring.datasource.password = 19961903
 #19961903
 #aA123456
 spring.jpa.show-sql = true
@@ -21,3 +21,6 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 mail.smtp.ssl.trust=smtp.gmail.com
 mail.smtp.starttls.enable=true
+
+spring.security.user.name=furkan
+spring.security.user.password=1
