--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,6 @@ server.port=8081
 spring.datasource.url = jdbc:mysql://localhost:3306/userdb?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username = root
 spring.datasource.password = 19961903
-#19961903
-#aA123456
 spring.jpa.show-sql = true
 
 #spring.datasource.initialize=true
@@ -22,5 +20,5 @@ spring.mail.properties.mail.smtp.auth=true
 mail.smtp.ssl.trust=smtp.gmail.com
 mail.smtp.starttls.enable=true
 
-spring.security.user.name=furkan
-spring.security.user.password=1
+#spring.security.user.name=furkan
+#spring.security.user.password=1
