--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.show-sql = true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
 #create-update
 
 spring.mail.host=smtp.gmail.com
