--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#server.servlet.contextPath=/userrest
+
 server.port=8081
 spring.datasource.url = jdbc:mysql://localhost:3306/userdb?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username = root
